Fixed sizing on mobile

--- a/style.css
+++ b/style.css
@@ -244,7 +244,7 @@ html, body {
 #name{
    color: rgb(51,51,51);
    position: absolute;
-   font-size: 44px;
+   font-size: 34px;
    top: 0;
 }
 
@@ -401,7 +401,7 @@ html, body {
    position: absolute;
    width: 100%;
    height: 100%;
-   /* justify-content: center; */
+   justify-content: center;
    align-items: center;
    z-index: 1000;
    background-color: rgb(0, 0, 0, 0.8);
@@ -417,13 +417,14 @@ html, body {
    position: absolute;
    z-index: 2;
    top: 140px;
-   right: 70px;
+   right: 50px;
    border: none;
    background: none;
    font-family: "Special Elite", serif;
    font-weight: 400;
    font-style: normal;
    font-size: 30px;
+   color: black;
 }
 
 #modalText{
@@ -434,17 +435,18 @@ html, body {
    width: 70%;
    z-index: 2;
    top: 160px;
-   right: 78px;
+   margin-top: -15px;
+   right: 58px;
    height: 60%;
 }
 
 #modalTitle{
-   font-size: 15px;
+   font-size: 12px;
    font-weight: bolder;
 }
 
 #modalContent{
-   font-size: 15px;
+   font-size: 12px;
    font-weight: normal;
 }
 
